# LineGuard

./: .gitignore  .replit  README.md  README_SETUP.md  app.py  pyproject.toml  replit.md
.streamlit/: config.toml
attached_assets/: Pasted--Summary-Build-an-application-for-Vegetation-Detection-Near-Power-Lines-To-Prevent-wild-fire--1759089545073_1759089545073.txt
utils/: data_loader.py  database.py  geospatial.py  ml_models.py  monitoring_system.py  risk_assessment.py  visualization.py  weather_service.py
