[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit-folium>=0.25.2",
    "streamlit>=1.50.0",
    "numpy>=2.3.3",
    "geopandas>=1.1.1",
    "plotly>=6.3.0",
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "folium>=0.20.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "earthengine-api>=1.6.9",
    "geemap>=0.36.3",
    "rasterio>=1.4.3",
    "fiona>=1.10.1",
    "psycopg2-binary>=2.9.10",
]
